<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"

    tools:context="com.codewithutsav.quoteapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="159dp"
                    android:background="@drawable/bg_card"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleX="-1"
                        android:scaleY="-1"
                        android:src="@drawable/ic_quote"
                        app:tint="#454545"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/quoteText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:fontFamily="@font/montserrat_semibold"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:text="@string/sample_quote"
                        android:textColor="#454545"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/quoteAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/sample_author"
                        android:textColor="#454545"
                        android:textIsSelectable="true"
                        android:textSize="20sp" />


                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foregroundTint="#FFF"
                    android:onClick="onShare"
                    app:backgroundTint="@color/purple_500"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:srcCompat="@drawable/ic_share"
                    tools:ignore="SpeakableTextPresentCheck"
                     />





            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="#FFF"
        android:onClick="onPrevious"
        app:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="#FFF"
        android:onClick="onRandom"
        app:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_shuffle"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center"
        android:foregroundTint="#FFF"
        android:onClick="onNext"
        app:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_forward"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />



</RelativeLayout>